style: cleared